--- a/mbti_web/Properties/launchSettings.json
+++ b/mbti_web/Properties/launchSettings.json
@@ -18,6 +18,7 @@
       //"launchUrl": "api/users",
       //"launchUrl": "api/auth",
       "applicationUrl": "https://localhost:7026;http://localhost:5026",
+      //"applicationUrl": "https://mbti_web",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
