--- a/mbti_web/appsettings.json
+++ b/mbti_web/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=mbti_db;Username=postgres;Password=1234;"
   },
-
+  "Secret": "secretkeyclient0",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
