--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,8 @@ http {
 	
 	upstream backend {
          server localhost:7026 weight=2;
+         server localhost:4026;
+         server localhost:3026;
     }
     
 	# главный бекенд
@@ -60,11 +62,11 @@ http {
 		location /api/v1/ {			
 			proxy_no_cache 1;
 			
-			proxy_pass http://backend/api$api_uri;
+			proxy_pass "http://$upstream_location/api$api_uri";
 		}
 		
 		location = /api/v1/ {
-			proxy_pass http://localhost:7026/swagger/v1/swagger.json;
+			proxy_pass http://main_backend/swagger/v1/swagger.json;
 		}
 		
 		location /mirror {
