--- a/mbti_web/Properties/launchSettings.json
+++ b/mbti_web/Properties/launchSettings.json
@@ -15,10 +15,10 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      //"launchUrl": "api/users",
-      //"launchUrl": "api/auth",
-      "applicationUrl": "https://localhost:7026;http://localhost:5026",
-      //"applicationUrl": "https://mbti_web",
+      //"launchUrl": "api/users/authenticate",
+      //"applicationUrl": "https://localhost:7026;http://localhost:5026",
+      //"applicationUrl": "http://localhost:7026;http://localhost:5026",
+      "applicationUrl": "http://localhost:7026;http://localhost:5026;http://localhost:4026;http://localhost:3026", // for ab
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
