--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,8 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
       with:
-        fetch-depth: 0
+        dotnet-version: 6.0.*
 
     - name: Setup .NET
       uses: actions/setup-dotnet@v1
@@ -23,11 +25,10 @@ jobs:
     
     - name: Restore dependencies
       run: dotnet restore
+      working-directory: mbti_web
     
     - name: Build
-      run: dotnet build -c Release --no-restore
-    
-    - name: Test
-      run: dotnet test -c Release --no-build --verbosity normal --filter "Category!=LongRunning"
+      run: dotnet build --no-restore
+      working-directory: mbti_web
     
     
