--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,8 +30,7 @@ jobs:
       run: dotnet build
       working-directory: mbti_web
     - name: Test
-      run: dotnet test 
-      working-directory: mbti_web
+      run: dotnet test UnitTests
   
     
     
