--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -10,6 +10,27 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    services:
+      # label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres:latest
+        # service environment variables
+        # `POSTGRES_HOST` is `postgres`
+        env:
+          # required
+          POSTGRES_PASSWORD: 123
+
+        ports:
+          # maps tcp port 5432 on service container to the host
+          - 5432:5432
+        # set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
     - uses: actions/checkout@v2
@@ -26,11 +47,16 @@ jobs:
     - name: Install dependencies
       run: dotnet restore
       working-directory: mbti_web
+      
     - name: Build
       run: dotnet build
       working-directory: mbti_web
-    - name: Test
+      
+      
+    - name: UnitTest
       run: dotnet test UnitTests
-  
-    
+
+    - name: E2ETest
+      run: dotnet test E2ETest
+      
     
