--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -12,25 +12,14 @@ jobs:
     runs-on: ubuntu-latest
     
     services:
-      # label used to access the service container
       postgres:
-        # Docker Hub image
         image: postgres:latest
-        # service environment variables
-        # `POSTGRES_HOST` is `postgres`
         env:
-          # required
-          POSTGRES_PASSWORD: 1234
-
+          POSTGRES_DB: "mbti_db"
+          POSTGRES_USER: "postgres"
+          POSTGRES_PASSWORD: "1234"
         ports:
-          # maps tcp port 5432 on service container to the host
-          - 5432:5432
-        # set health checks to wait until postgres has started
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+          - "5432:5432"
 
     steps:
     - uses: actions/checkout@v2
