--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -49,8 +49,11 @@ jobs:
       working-directory: mbti_web
       
       
-    #- name: UnitTest
-    #  run: dotnet test UnitTests
+    - name: UnitTest
+      run: dotnet test UnitTests
+      
+    - name: IntegrationTests
+      run: dotnet test IntegrationTests
 
     - name: E2ETest
       run: dotnet test E2ETest
