--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,6 +30,7 @@ jobs:
           POSTGRES_DB: "mbti_db"
           POSTGRES_USER: "postgres"
           POSTGRES_PASSWORD: "1234"
+          POSTGRES_HOST: 127.0.0.1
           #POSTGRES_HOST: postgres
         ports:
           - "127.0.0.1:5432:5432"
@@ -65,8 +66,6 @@ jobs:
     - name: Build UnitTest
       run: dotnet build --no-restore                 
       working-directory: UnitTests
-    - name: Init db
-      run: psql "sslmode=disable user=postgres hostaddr=127.0.0.1 port=5432 password=1234 dbname=mbti_db" < db_init.sql
     - name: UnitTest
       run: dotnet test UnitTests
       
@@ -76,6 +75,14 @@ jobs:
     - name: Build IntegrationTests
       run: dotnet build --no-restore                 
       working-directory: IntegrationTests
+    - name: Init db
+      run: psql "sslmode=disable user=postgres hostaddr=127.0.0.1 port=5432 password=1234 dbname=mbti_db" < db_init.sql
+    - name: Fill db
+      run: psql "sslmode=disable user=postgres hostaddr=127.0.0.1 port=5432 password=1234 dbname=mbti_db" < db_fill.sql
+    - name: Clear db
+      run: psql "sslmode=disable user=postgres hostaddr=127.0.0.1 port=5432 password=1234 dbname=mbti_db" < db_clear.sql
+    - name: Drop db
+      run: psql "sslmode=disable user=postgres hostaddr=127.0.0.1 port=5432 password=1234 dbname=mbti_db" < db_drop.sql
     - name: IntegrationTests
       run: dotnet test IntegrationTests
 
