--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,10 +30,11 @@ jobs:
           POSTGRES_DB: "mbti_db"
           POSTGRES_USER: "postgres"
           POSTGRES_PASSWORD: "1234"
-          POSTGRES_HOST: 127.0.0.1
+          3POSTGRES_HOST: 127.0.0.1
           #POSTGRES_HOST: postgres
         ports:
-          - "127.0.0.1:5432:5432"
+          #- "127.0.0.1:5432:5432"
+          - "5432:5432"
         options: >-
             --health-cmd pg_isready
             --health-interval 10s
@@ -81,6 +82,11 @@ jobs:
       run: psql "sslmode=disable user=postgres hostaddr=127.0.0.1 port=5432 password=1234 dbname=mbti_db" < db_fill.sql
     - name: IntegrationTests
       run: dotnet test IntegrationTests
+      env:
+        # use postgres for the host here because we have specified a container for the job.
+        # If we were running the job on the VM this would be localhost
+        POSTGRES_HOST: postgres
+        POSTGRES_PORT: ${{ job.services.postgres.ports[5432] }}
     - name: Clear db
       run: psql "sslmode=disable user=postgres hostaddr=127.0.0.1 port=5432 password=1234 dbname=mbti_db" < db_clear.sql
     - name: Drop db
